Fix vertical menu floating
vertical menu scrollbar thinner

--- a/src/scss/recit/_navsections.scss
+++ b/src/scss/recit/_navsections.scss
@@ -42,20 +42,6 @@ $max-width-responsive-m5: 992px;
             height: calc(100vh - #{$top-navbar-height});
             overflow-y: auto;
             position: relative;
-            /* width */
-            &::-webkit-scrollbar { width: 4px; height: 4px;}
-            
-            /* Track */
-            &::-webkit-scrollbar-track { background: #f1f1f1; }
-    
-            /* Handle */
-            &::-webkit-scrollbar-thumb {background: #888;}
-    
-            /* Handle on hover */
-            &::-webkit-scrollbar-thumb:hover {background: #555;}
-            /* Scrollbar for Firefox */
-            scrollbar-color: #888 #f1f1f1;
-            scrollbar-width: thin;
         }
         .navbar-expand-lg .navbar-toggler-desktop {
             display: block !important;
@@ -158,6 +144,20 @@ $max-width-responsive-m5: 992px;
     }
 
     &.vertical{
+        .menuM5-inner {
+            /* width */
+            &::-webkit-scrollbar { width: 4px; height: 4px;}
+            /* Track */
+            &::-webkit-scrollbar-track { background: #f1f1f1; }
+            /* Handle */
+            &::-webkit-scrollbar-thumb {background: #888;}
+            /* Handle on hover */
+            &::-webkit-scrollbar-thumb:hover {background: #555;}
+            /* Scrollbar for Firefox */
+            //When these properties are set, ::-webkit-scrollbar styling is disabled.
+           // scrollbar-color: #888 #f1f1f1;
+           // scrollbar-width: thin;
+        }
         grid-template-rows: auto;
 
         .navbar{align-items: baseline; align-content: baseline;}
